<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">
        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="130dp"
            android:src="@drawable/logolab"
            android:contentDescription="LOGO" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tittle"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            android:layout_marginTop="120dp" />
        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            android:padding="18dp">

            <EditText
                android:id="@+id/etUsernameLogin"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:hint="@string/user"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="12dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textSecondary" />
            <EditText
                android:id="@+id/etPasswdLogin"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/password"
                android:imeActionId="6"
                android:imeActionLabel="Sign In"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="12dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textSecondary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnSignUpLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:layout_width="2dp"
                    android:layout_height="2dp"
                    android:layout_weight="0"
                    android:orientation="vertical"></LinearLayout>
                <Button
                    android:id="@+id/btnSignInLogin"
                    android:layout_width="0dp"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:onClick="actLogin"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>